# Makenna-CompProgramming-2-Project-

./: CMakeLists.txt  grocery_list.json
include/: Ingredient.h  RecipeManager.h  Storage.h
src/: CMakeLists.txt  Ingredient.cpp  RecipeManager.cpp  main.cpp
